@@ -2,7 +2,7 @@ package com.fleencorp.feen.service.impl.review;
 
 import com.fleencorp.base.model.request.search.SearchRequest;
 import com.fleencorp.base.model.view.search.SearchResultView;
-import com.fleencorp.feen.constant.review.ReviewType;
+import com.fleencorp.feen.constant.review.ReviewParentType;
 import com.fleencorp.feen.exception.base.FailedOperationException;
 import com.fleencorp.feen.exception.review.CannotAddReviewIfStreamHasNotStartedException;
 import com.fleencorp.feen.exception.review.ReviewNotFoundException;
@@ -11,8 +11,8 @@ import com.fleencorp.feen.mapper.review.ReviewMapper;
 import com.fleencorp.feen.model.domain.review.Review;
 import com.fleencorp.feen.model.domain.stream.FleenStream;
 import com.fleencorp.feen.model.domain.user.Member;
-import com.fleencorp.feen.model.dto.stream.review.AddReviewDto;
-import com.fleencorp.feen.model.dto.stream.review.UpdateReviewDto;
+import com.fleencorp.feen.model.dto.review.AddReviewDto;
+import com.fleencorp.feen.model.dto.review.UpdateReviewDto;
 import com.fleencorp.feen.model.holder.ReviewOtherDetailsHolder;
 import com.fleencorp.feen.model.request.search.review.ReviewSearchRequest;
 import com.fleencorp.feen.model.response.review.AddReviewResponse;
@@ -22,21 +22,26 @@ import com.fleencorp.feen.model.response.review.UpdateReviewResponse;
 import com.fleencorp.feen.model.search.review.ReviewSearchResult;
 import com.fleencorp.feen.model.security.FleenUser;
 import com.fleencorp.feen.repository.review.ReviewRepository;
+import com.fleencorp.feen.service.like.LikeService;
 import com.fleencorp.feen.service.review.ReviewService;
 import com.fleencorp.feen.service.stream.common.StreamService;
 import com.fleencorp.localizer.service.Localizer;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
 
 import static com.fleencorp.base.util.ExceptionUtil.checkIsNull;
 import static com.fleencorp.base.util.FleenUtil.toSearchResult;
+import static com.fleencorp.feen.service.impl.common.MiscServiceImpl.setEntityUpdatableByUser;
+import static com.fleencorp.feen.util.CommonUtil.allNonNull;
 import static java.util.Objects.nonNull;
 
 /**
@@ -55,26 +60,29 @@ import static java.util.Objects.nonNull;
 @Service
 public class ReviewServiceImpl implements ReviewService {
 
+  private final LikeService likeService;
   private final StreamService streamService;
   private final ReviewRepository reviewRepository;
   private final ReviewMapper reviewMapper;
   private final Localizer localizer;
 
   /**
-   * Constructs a {@link ReviewServiceImpl} instance with the specified dependencies.
+   * Constructs a new {@code ReviewServiceImpl}, responsible for managing reviews and related interactions
+   * such as likes on reviews within streams.
    *
-   * <p>This constructor initializes the service with repositories for managing streams and reviews,
-   * as well as a localized response handler for returning user-friendly messages.</p>
-   *
-   * @param streamService the service for accessing and managing streams
-   * @param reviewRepository the repository for accessing stream review data
-   * @param localizer the service for generating localized responses
+   * @param likeService the service used to handle like operations on reviews (injected lazily to avoid circular dependencies)
+   * @param streamService the service for retrieving and validating stream-related data associated with reviews
+   * @param reviewRepository the repository for performing CRUD operations on review entities
+   * @param reviewMapper the mapper for converting between review entities and their corresponding DTOs
+   * @param localizer the utility for resolving localized text for responses and messages
    */
   public ReviewServiceImpl(
-    final StreamService streamService,
-    final ReviewRepository reviewRepository,
-    final ReviewMapper reviewMapper,
-    final Localizer localizer) {
+      @Lazy final LikeService likeService,
+      final StreamService streamService,
+      final ReviewRepository reviewRepository,
+      final ReviewMapper reviewMapper,
+      final Localizer localizer) {
+    this.likeService = likeService;
     this.streamService = streamService;
     this.reviewRepository = reviewRepository;
     this.reviewMapper = reviewMapper;
@@ -103,17 +111,8 @@ public class ReviewServiceImpl implements ReviewService {
       page = reviewRepository.findByStreamId(searchRequest.getParentId(), searchRequest.getPage());
     }
 
-    // Convert the reviews to the response
-    final List<ReviewResponse> reviewResponses = reviewMapper.toReviewResponsesPublic(page.getContent());
-    // Check and set the reviews that are updatable by the user
-    setReviewsThatAreUpdatableByUser(reviewResponses, user.getId());
-
-    // Create the search result view
-    final SearchResultView searchResultView = toSearchResult(reviewResponses, page);
-    // Create the search result
-    final ReviewSearchResult searchResult = ReviewSearchResult.of(searchResultView);
-    // Return a search result view with the review responses and pagination details
-    return localizer.of(searchResult);
+    // Convert and process the reviews to responses
+    return processAndReturnReviews(page, user.toMember());
   }
 
   /**
@@ -123,103 +122,28 @@ public class ReviewServiceImpl implements ReviewService {
    * it is mapped to a {@link ReviewResponse} and returned. If no review is found, {@code null} is returned.
    * Additionally, if the review was created by the current user, it will be marked as updatable.</p>
    *
-   * @param reviewType the type of reviews to find
+   * @param reviewParentType the type of reviews to find
    * @param parentId the ID of the parent which review is a child of
    * @param user the {@link FleenUser} whose ownership of the review is being verified for updatability
    * @return the {@link ReviewResponse} for the most recent review, or {@code null} if no review is found
    */
   @Override
-  public ReviewResponse findMostRecentReview(final ReviewType reviewType, final Long parentId, final FleenUser user) {
+  public ReviewResponse findMostRecentReview(final ReviewParentType reviewParentType, final Long parentId, final FleenUser user) {
     // Prepare search request details
     final PageRequest pageRequest = PageRequest.of(0, 1);
     // List of review
     List<Review> reviews = new ArrayList<>();
 
-    if (ReviewType.isStream(reviewType)) {
-      reviews = findMostRecentReviewByStream(parentId, pageRequest);
+    if (ReviewParentType.isStream(reviewParentType)) {
+      reviews = reviewRepository.findMostRecentReviewByStream(parentId, pageRequest);
     }
 
     // Return the most recent review
-    return extractMostRecentReview(reviews, user.getId());
-  }
-
-  /**
-   * Retrieves the most recent review(s) for a specified stream using pagination.
-   *
-   * <p>This method queries the review repository to find the most recent review(s) associated
-   * with the given stream ID, based on the provided {@link PageRequest}. Pagination is used to
-   * limit the number of reviews returned.</p>
-   *
-   * @param streamId the ID of the stream whose most recent review(s) are being retrieved
-   * @param pageRequest the {@link PageRequest} object specifying pagination details (page number, size, etc.)
-   * @return a list of {@link Review} objects for the most recent review(s) of the stream
-   */
-  private List<Review> findMostRecentReviewByStream(final Long streamId, final PageRequest pageRequest) {
-    return reviewRepository.findMostRecentReviewByStream(streamId, pageRequest);
-  }
-
-  /**
-   * Extracts the most recent review from the provided list of reviews and marks it as updatable if applicable.
-   *
-   * <p>This method processes a list of {@link Review} objects, retrieves the most recent one (if any), and
-   * converts it to a {@link ReviewResponse}. If the review is authored by the specified user, it is marked
-   * as updatable.</p>
-   *
-   * @param reviews the list of reviews from which the most recent review is extracted
-   * @param userId the ID of the user to check if they authored the review and mark it as updatable
-   * @return the {@link ReviewResponse} of the most recent review, or {@code null} if no review is found
-   */
-  private ReviewResponse extractMostRecentReview(final List<Review> reviews, final Long userId) {
-    if (nonNull(reviews)) {
-      return reviews.stream()
-        .findFirst()
-        .map(reviewMapper::toReviewResponsePublic)
-        .map(reviewResponse -> {
-          // Mark the review as updatable if necessary
-          setReviewAsUpdatableIfApplicable(reviewResponse, userId);
-          return reviewResponse;
-        })
-        .orElse(null);
-    }
-
-    return null;
-  }
-
-  /**
-   * Marks reviews that are updatable by the given member.
-   *
-   * <p>This method iterates through a list of {@link ReviewResponse} objects and marks reviews as
-   * updatable if they were created by the specified {@link Member}. A review is considered updatable
-   * if the member who created it matches the member passed to this method.</p>
-   *
-   * @param reviews the list of {@link ReviewResponse} objects to check for update eligibility
-   * @param userId the user whose reviews should be marked as updatable
-   */
-  protected static void setReviewsThatAreUpdatableByUser(final List<ReviewResponse> reviews, final Long userId) {
-    if (nonNull(reviews) && nonNull(userId)) {
-      reviews.forEach(review -> {
-        if (nonNull(review.getMemberId()) && review.getMemberId().equals(userId)) {
-          review.markAsUpdatable();
-        }
-      });
-    }
-  }
-
-  /**
-   * Marks the given review as updatable if it belongs to the specified member.
-   *
-   * <p>This method checks if the provided {@link ReviewResponse} was created by the given {@link Member}.
-   * If so, it marks the review as updatable. This is a helper method that wraps the logic of marking a
-   * single review, utilizing {@link #setReviewsThatAreUpdatableByUser(List, Long)}.</p>
-   *
-   * @param reviewResponse the {@link ReviewResponse} to be checked and potentially marked as updatable
-   * @param userId the user whose ownership of the review is being verified
-   */
-  protected static void setReviewAsUpdatableIfApplicable(final ReviewResponse reviewResponse, final Long userId) {
-    if (nonNull(reviewResponse)) {
-      final List<ReviewResponse> reviewResponses = Collections.singletonList(reviewResponse);
-      setReviewsThatAreUpdatableByUser(reviewResponses, userId);
-    }
+    final ReviewResponse reviewResponse = getMostRecentReview(reviews, user.getId());
+    // Process other details of the reviews
+    processReviewsOtherDetails(List.of(reviewResponse), user.toMember());
+    // Return the review
+    return reviewResponse;
   }
 
   /**
@@ -236,14 +160,36 @@ public class ReviewServiceImpl implements ReviewService {
   public ReviewSearchResult findMyReviews(final SearchRequest searchRequest, final FleenUser user) {
     // Find all user reviews
     final Page<Review> page = reviewRepository.findByMember(user.toMember(), searchRequest.getPage());
-    // Convert the reviews to the response
-    final List<ReviewResponse> reviewResponses = reviewMapper.toReviewResponsesPrivate(page.getContent());
-    // Create the search result view
-    final SearchResultView searchResultView = toSearchResult(reviewResponses, page);
-    // Create the search result
-    final ReviewSearchResult searchResult = ReviewSearchResult.of(searchResultView);
-    // Return a search result view with the review responses and pagination details
-    return localizer.of(searchResult);
+    // Convert and process the reviews to responses
+    return processAndReturnReviews(page, user.toMember());
+  }
+
+  /**
+   * Processes a page of reviews and returns a localized search result.
+   *
+   * <p>This method converts each {@link Review} in the page to a {@link ReviewResponse}, processes
+   * additional review details, wraps the responses in a {@link SearchResultView}, and then returns
+   * a localized {@link ReviewSearchResult}.</p>
+   *
+   * @param page the paginated list of reviews
+   * @param member the current member viewing the reviews
+   * @return a localized {@link ReviewSearchResult}, or an empty result if input is null
+   */
+  protected ReviewSearchResult processAndReturnReviews(final Page<Review> page, final Member member) {
+    if (allNonNull(page, member)) {
+      // Convert Review entities to responses
+      final List<ReviewResponse> reviewResponses = reviewMapper.toReviewResponsesPublic(page.getContent());
+      // Process other details of the reviews
+      processReviewsOtherDetails(reviewResponses, member);
+      // Create the search result view
+      final SearchResultView searchResultView = toSearchResult(reviewResponses, page);
+      // Create the search result
+      final ReviewSearchResult searchResult = ReviewSearchResult.of(searchResultView);
+      // Return a search result view with the review responses and pagination details
+      return localizer.of(searchResult);
+    }
+
+    return ReviewSearchResult.empty();
   }
 
   /**
@@ -264,23 +210,21 @@ public class ReviewServiceImpl implements ReviewService {
   public AddReviewResponse addReview(final AddReviewDto addReviewDto, final FleenUser user)
       throws StreamNotFoundException, CannotAddReviewIfStreamHasNotStartedException {
     // Get the review type
-    final ReviewType reviewType = addReviewDto.getReviewType();
+    final ReviewParentType reviewParentType = addReviewDto.getReviewParentType();
     // Get the necessary details
-    final ReviewOtherDetailsHolder reviewOtherDetailsHolder = retrieveReviewOtherDetailsHolder(reviewType, addReviewDto.getParentId());
+    final ReviewOtherDetailsHolder reviewOtherDetailsHolder = retrieveReviewOtherDetailsHolder(reviewParentType, addReviewDto.getParentId());
     // Retrieve the stream
     final FleenStream stream = reviewOtherDetailsHolder.stream();
     // Check other details
-    checkAddReviewEligibility(reviewType, stream);
+    checkAddReviewEligibility(reviewParentType, stream);
     // Convert the dto to the entity
     final Review review = addReviewDto.toStreamReview(stream, user.toMember());
-
     // Save the new StreamReview to the repository
     reviewRepository.save(review);
-
     // Create the review response
     final ReviewResponse reviewResponse = reviewMapper.toReviewResponsePublic(review);
     // Set the review is-updatable check
-    setReviewAsUpdatableIfApplicable(reviewResponse, user.getId());
+    setEntityUpdatableByUser(reviewResponse, user.getId());
     // Get the response
     final AddReviewResponse addReviewResponse = AddReviewResponse.of(reviewResponse);
     // Return a localized response for the added review
@@ -313,14 +257,12 @@ public class ReviewServiceImpl implements ReviewService {
 
       // Update the existing review with the new details
       review.update(updateReviewDto.getReview(), updateReviewDto.getRating());
-
       // Save the StreamReview to the repository
       reviewRepository.save(review);
-
       // Create the review response
       final ReviewResponse reviewResponse = reviewMapper.toReviewResponsePublic(review);
-      // Set the review is-updatable check
-      setReviewAsUpdatableIfApplicable(reviewResponse, user.getId());
+      // Process other details of the reviews
+      processReviewsOtherDetails(List.of(reviewResponse), user.toMember());
       // Get the response
       final UpdateReviewResponse updateReviewResponse = UpdateReviewResponse.of(reviewResponse);
       // Return a localized response for the updated review
@@ -328,6 +270,29 @@ public class ReviewServiceImpl implements ReviewService {
     }
 
     throw new ReviewNotFoundException(reviewId);
+  }
+
+  /**
+   * Populates additional metadata for each review response such as update eligibility and like status.
+   *
+   * <p>Each {@link ReviewResponse} is checked to determine if it can be updated by the current member,
+   * and also enriched with the member’s like information if applicable.</p>
+   *
+   * @param reviewResponses the list of review responses to process
+   * @param member the current member interacting with the reviews
+   */
+  protected void processReviewsOtherDetails(final Collection<ReviewResponse> reviewResponses, final Member member) {
+    if (allNonNull(reviewResponses, member)) {
+      reviewResponses.stream()
+        .filter(Objects::nonNull)
+        .forEach(reviewResponse -> {
+          // Set the review is-updatable check
+          setEntityUpdatableByUser(reviewResponse, member.getMemberId());
+      });
+
+      // Set the like info by the user if any
+      likeService.populateLikesForReviews(reviewResponses, member);
+    }
   }
 
   /**
@@ -352,21 +317,21 @@ public class ReviewServiceImpl implements ReviewService {
   /**
    * Retrieves the {@link ReviewOtherDetailsHolder} for the specified review type and stream ID.
    *
-   * <p>This method checks the validity of the {@code reviewType} parameter and retrieves the corresponding
+   * <p>This method checks the validity of the {@code reviewParentType} parameter and retrieves the corresponding
    * {@link FleenStream} if the review type is a stream. The {@link ReviewOtherDetailsHolder} is then created
    * based on the stream details.</p>
    *
-   * @param reviewType the type of review, used to determine whether to retrieve stream details
+   * @param reviewParentType the type of review, used to determine whether to retrieve stream details
    * @param streamId the ID of the stream, applicable only if the review type is {@code STREAM}
    * @return a {@link ReviewOtherDetailsHolder} containing other details related to the review
-   * @throws FailedOperationException if the {@code reviewType} is null or invalid
+   * @throws FailedOperationException if the {@code reviewParentType} is null or invalid
    */
-  protected ReviewOtherDetailsHolder retrieveReviewOtherDetailsHolder(final ReviewType reviewType, final Long streamId) throws FailedOperationException {
-    // Ensure reviewType is not null
-    checkIsNull(reviewType, FailedOperationException::new);
+  protected ReviewOtherDetailsHolder retrieveReviewOtherDetailsHolder(final ReviewParentType reviewParentType, final Long streamId) throws FailedOperationException {
+    // Ensure reviewParentType is not null
+    checkIsNull(reviewParentType, FailedOperationException::new);
 
-    // If the reviewType is a stream, retrieve the associated FleenStream
-    final FleenStream stream = ReviewType.isStream(reviewType)
+    // If the reviewParentType is a stream, retrieve the associated FleenStream
+    final FleenStream stream = ReviewParentType.isStream(reviewParentType)
       ? streamService.findStream(streamId)
       : null;
 
@@ -380,14 +345,69 @@ public class ReviewServiceImpl implements ReviewService {
    * <p>This method ensures that a review can only be added for streams that are ongoing or completed.
    * If the stream has not started yet, it throws a {@link CannotAddReviewIfStreamHasNotStartedException}.</p>
    *
-   * @param reviewType the type of the review, used to verify the type of review being added
+   * @param reviewParentType the type of the review, used to verify the type of review being added
    * @param stream the {@link FleenStream} being reviewed, used to determine the stream's current status
    * @throws CannotAddReviewIfStreamHasNotStartedException if the stream has not started yet
    */
-  protected void checkAddReviewEligibility(final ReviewType reviewType, final FleenStream stream) {
+  protected void checkAddReviewEligibility(final ReviewParentType reviewParentType, final FleenStream stream) {
     // Only streams that are ongoing or completed can be reviewed
-    if (nonNull(reviewType) && nonNull(stream) && stream.hasNotStarted()) {
+    if (nonNull(reviewParentType) && nonNull(stream) && stream.hasNotStarted()) {
       throw CannotAddReviewIfStreamHasNotStartedException.of();
     }
+  }
+
+  /**
+   * Increments the like count of the review identified by the given ID.
+   *
+   * <p>This method delegates to the repository to atomically
+   * increment the stored count, and returns the updated value.</p>
+   *
+   * @param reviewId the ID of the review to increment the like count for
+   * @return the updated like count as a {@code Long}
+   */
+  @Override
+  @Transactional
+  public Long incrementLikeCount(final Long reviewId) {
+    final int total = reviewRepository.incrementAndGetLikeCount(reviewId);
+    return (long) total;
+  }
+
+  /**
+   * Decrements the like count of the review identified by the given ID.
+   *
+   * <p>This method delegates the operation to the underlying
+   * repository, which atomically decrements the stored count
+   * and returns the updated total.</p>
+   *
+   * @param reviewId the ID of the review to decrement the like count for
+   * @return the updated like count as a {@code Long}
+   */
+  @Override
+  @Transactional
+  public Long decrementLikeCount(final Long reviewId) {
+    final int total = reviewRepository.decrementAndGetLikeCount(reviewId);
+    return (long) total;
+  }
+
+  /**
+   * Extracts the most recent review from the provided list of reviews and marks it as updatable if applicable.
+   *
+   * <p>This method processes a list of {@link Review} objects, retrieves the most recent one (if any), and
+   * converts it to a {@link ReviewResponse}. If the review is authored by the specified user, it is marked
+   * as updatable.</p>
+   *
+   * @param reviews the list of reviews from which the most recent review is extracted
+   * @param userId the ID of the user to check if they authored the review and mark it as updatable
+   * @return the {@link ReviewResponse} of the most recent review, or {@code null} if no review is found
+   */
+  protected ReviewResponse getMostRecentReview(final List<Review> reviews, final Long userId) {
+    if (nonNull(reviews)) {
+      return reviews.stream()
+        .findFirst()
+        .map(reviewMapper::toReviewResponsePublic)
+        .orElse(null);
+    }
+
+    return null;
   }
 }
